--- a/site/Styles.css
+++ b/site/Styles.css
@@ -2,14 +2,14 @@ body {
     font-size: 16px;
     font-family: 'Source Sans Pro', sans-serif;
     color: #1a1a1a;
-    background-color: #599e4b;
+    background-color: #4b7d9e;
 }
 
 
 /** HEADER **/
 
 #header-nav {
-    background-color: #c98715;
+    background-color: #c95d15;
     border-radius: 0;
     border: 0;
 }
