--- a/site/css/Styles.css
+++ b/site/css/Styles.css
@@ -91,7 +91,7 @@ body {
 #chicken-tile, #beef-tile, #sushi-tile {
     width: 100%;
     padding: 20px;
-    background-color: #99ed7b;
+    background-color: #7b96ed;
     margin-bottom: 60px;
     box-shadow: 0 0 80px #18580b;
 }
