--- a/site/Styles.css
+++ b/site/Styles.css
@@ -93,7 +93,7 @@ body {
     padding: 20px;
     background-color:#7b96ed;
     margin-bottom: 60px;
-    box-shadow: 0 0 80px #0b2f58;
+    box-shadow: 0 0 80px #3b6ca5;
 }
 
 
